# trale

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
examples/: sub_tasks.rs  tcp.rs  tcp_serv.rs  timer.rs  udp.rs  web_server.rs
src/: lib.rs  task.rs  timer.rs
src/futures/: event.rs  fs.rs  mod.rs  mutex.rs  read.rs  sock_addr.rs  tcp.rs  timer.rs  udp.rs  write.rs
src/reactor/: io.rs  mod.rs  poll.rs  uring.rs
src/reactor/poll/: events.rs
src/reactor/uring/: io.rs
