[package]
name = "trale"
version = "0.2.0"
edition = "2021"
authors = ["Matthew Leach <dev@mattleach.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hexagonal-sun/trale"
description = """
Trale is a minimalistic Rust async executor using io_uring for efficient, correct
task execution.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]


[dependencies]
io-uring = "0.7.4"
libc = "0.2.167"
log = "0.4.22"
slab = "0.4.9"

[dev-dependencies]
anyhow = "1.0.81"
assert_fs = "1.1.2"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
